--- a/index.html
+++ b/index.html
@@ -698,10 +698,10 @@
     clearError();
     elStatus.textContent = "Loading…";
 
-    if (!SHEET_CSV_URL || SHEET_CSV_URL.includes("https://docs.google.com/spreadsheets/d/e/2PACX-1vRu3etH39q0hOlR_YLhJdUqTvSQeAY_RLpcz1X1qSAaYnHo2SlAqkQK9RXzMt0GDUoy5-3aLTHyyHFt/pub?gid=0&single=true&output=csv")) {
-      showError("Paste your published Google Sheets CSV URL into SHEET_CSV_URL in index.html.");
-      elStatus.textContent = "Missing CSV URL";
-      return;
+    if (!SHEET_CSV_URL || SHEET_CSV_URL.includes("PASTE_YOUR_PUBLISHED_CSV_URL_HERE")) {
+    showError("Paste your published Google Sheets CSV URL into SHEET_CSV_URL in index.html.");
+    elStatus.textContent = "Missing CSV URL";
+    return;
     }
 
     try {
